update pom and some cleanup
update pom for build