@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.priam</groupId>
 	<artifactId>Priam</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
     
 	<parent>
       <groupId>org.sonatype.oss</groupId>
@@ -44,9 +43,6 @@
         <developerConnection>scm:git:git@github.com:Netflix/Priam.git</developerConnection>
     </scm>
 	
-	<repositories>
-
-	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -154,14 +150,14 @@
 			<version>1.5</version>
 		</dependency>
 		<dependency>
-			<groupId>mockit</groupId>
+			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
-			<version>0.999.4</version>
+			<version>0.999.12</version>
 		</dependency>
 		<dependency>
       		<groupId>junit</groupId>
      		 <artifactId>junit</artifactId>
-     		 <version>4.4</version>
+     		 <version>4.8</version>
      	</dependency>
      	<dependency>
       		<groupId>xerces</groupId>
@@ -234,7 +230,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.10</version>
+                <version>2.12</version>
+				<configuration>
+					<argLine>
+						-Xms256m -Xmx1024m -XX:MaxPermSize=512m -javaagent:"${settings.localRepository}"/com/googlecode/jmockit/jmockit/0.999.12/jmockit-0.999.12.jar
+					</argLine>
+					<skipTests>true</skipTests>
+				</configuration>	
             </plugin>
 
             <plugin>
